# neovide

./: Cargo.toml
src/: window.rs
src/bridge/: mod.rs
vide/: Cargo.toml
vide/examples/: hello.rs
vide/src/: events.rs  keyboard.rs  lib.rs  redraw_scheduler.rs  todo.txt  window.rs
vide/src/renderer/: mod.rs  renderer_state.rs
vide/src/renderer/cursor_renderer/: cursor_vfx.rs
